--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ header {
   color: #5a27f2;
 }
 .banner__container {
-  animation: fadeInUp 2s ease-out forwards; /* Fade in and move up */
+  animation: fadeInUp 2s ease-out forwards;
   position: relative;
 }
 .banner__title,
@@ -386,6 +386,9 @@ header {
   border-radius: 8px;
   transition: 0.3s;
   font-size: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .tablink:hover {
@@ -584,23 +587,23 @@ header {
 }
 
 .popup {
-  display: none; /* Inicialmente oculto */
-  position: fixed; /* Fica fixo na tela */
+  display: none;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+  background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Garante que o pop-up fique acima de outros elementos */
+  z-index: 1000;
 }
 
 .popup__content {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
-  width: 300px; /* Ajuste o tamanho do pop-up conforme necessário */
+  width: 300px;
   text-align: center;
   position: relative;
 }
