--- a/style.css
+++ b/style.css
@@ -424,17 +424,16 @@ h1,
 }
 
 .tabs {
-  display: grid;
-  grid-template-columns: 50% 50%;
+  display: flex;
   justify-content: center;
   justify-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 .tabs__action {
   background-color: var(--purple--light);
   font-family: var(--title-font);
-  width: auto !important;
+  width: 170px !important;
   font-weight: 600;
   border: none;
   padding: 14px 16px;
